tests/invalid_ast_samples/fb5b7e98a81fac64880a9521f0af8887d739fd1ad60b8d56006eece46cc42305.py
from ast import Module
from ast import Return

tree = Module(body=[Return()], type_ignores=[])

# version: 3.12.0
#
# Source:
# return
#
#
# Error:
#     SyntaxError("'return' outside function", ('<file>', 1, 1, None, 1, 7))
